syntax = "proto3";

option go_package = ".;user";

package user;

service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message User {
    int32 id = 1;
    string email = 2;
    string phone = 3;
    string name = 4;
    string created_at = 5;
    string updated_at = 6;
}

message RegisterRequest {
    string email = 1;
    string phone = 2;
    string password = 3;
    string name = 4;
}

message RegisterResponse {
    User user = 1;
    string token = 2;
}

message LoginRequest {
    string email_or_phone = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string token = 2;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    User user = 2;
}

message GetUserRequest {
    int32 user_id = 1;
}

message GetUserResponse {
    User user = 1;
}